z-index fix:books

--- a/frontend/src/components/book.css
+++ b/frontend/src/components/book.css
@@ -20,7 +20,7 @@ border-radius: 3%;
   top: 13px; /* from navbar */
   left: 28%;
 
-  z-index: 10;
+  z-index: 2;
 
 /* border: 3px solid blue; */
 width:43%;
