--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -9,7 +9,7 @@
   flex-direction: row;
   position:absolute;
   z-index:20;
-  top:20px;
+  top:3px;
 }
 .lights{
   width:50%;
@@ -140,7 +140,7 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 3;
 }
 
 .navbar-title {
@@ -197,7 +197,7 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: ;
 }
 
 .navbar-title {
